Prepare for github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "linktree-clone",
+  "name": "linktree",
   "version": "0.1.0",
+  "homepage": "https://davidhoferzeni.github.io/portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "5.16.1",
@@ -10,7 +11,7 @@
     "react-dark-mode-toggle": "0.2.0",
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "1.5.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-social-icons": "5.6.1",
     "styled-components": "5.3.1",
     "web-vitals": "2.1.2"
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
