--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Install npm packages
+      run: npm ci
     - name: Build app with npm
       run: npm run build --if-present
     - name: Deploy with gh-pages
