--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linktree",
   "version": "0.1.0",
-  "homepage": "https://davidzenisu.github.io/linktree/",
+  "homepage": "https://david.zeni-su.com/linktree/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "5.16.1",
